--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
 		    <artifactId>activation</artifactId>
 		    <version>1.1.1</version>
 		</dependency>
+		<dependency>  
+            <groupId>com</groupId>  
+            <artifactId>frame</artifactId>  
+            <version>0.0.1-SNAPSHOT</version>  
+        </dependency>
 	</dependencies>
 
   <build>
